--- a/Assigment/Module-4-Javascript/style.css
+++ b/Assigment/Module-4-Javascript/style.css
@@ -118,3 +118,30 @@ hr {
     width: 80%;
     margin: 0 auto;
 }
+
+.title {
+    top: 40%;
+    left: 20%;
+    position: absolute;
+    font-size: 100px;
+    color: #227c9d;
+    text-shadow: 0 0 10px #c49ca7;
+    transition: exampleAnimation 2s ease-in-out infinite;
+    user-select: none;
+    animation: uniqueAnimation 3s infinite;
+    z-index: -9999;
+}
+@keyframes uniqueAnimation {
+    0% {
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(-20px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 0;
+    }
+}
