--- a/Estatein/About/about.css
+++ b/Estatein/About/about.css
@@ -74,10 +74,13 @@ a {
     cursor: pointer;
     background: #141414;
 }
+
 nav.scrolled {
     color: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,.1); /* Adds a slight shadow for depth */
-    transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+    /* Adds a slight shadow for depth */
+    transition: background-color 0.3s, box-shadow 0.3s;
+    /* Smooth transition */
     position: fixed;
     top: 0%;
     width: 100%;
@@ -87,7 +90,8 @@ nav.scrolled {
 /* Ensure text and other elements within the navbar are styled appropriately for the new background */
 nav.scrolled .nav-link a,
 nav.scrolled .nav-item a {
-    color: #fff; /* Change text color for better visibility on the new background */
+    color: #fff;
+    /* Change text color for better visibility on the new background */
 }
 
 nav {
@@ -227,10 +231,12 @@ a:hover::before {
         }
     }
 }
+
 @keyframes rotateImage {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
@@ -448,6 +454,7 @@ a:hover::before {
         }
     }
 }
+
 .cta {
     background-color: black;
 
@@ -464,6 +471,7 @@ a:hover::before {
         width: 70%;
         margin-bottom: 1rem;
     }
+
     .btn-2 {
         padding: 1rem;
         border-radius: 1rem;
@@ -473,6 +481,7 @@ a:hover::before {
         background: #703BF7;
     }
 }
+
 footer {
     background-color: black;
     padding: 4rem 0 2rem;
